fix task log parent and child show log
